--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,3 +2,19 @@ html, body {
     margin: 0;
     padding: 0;
 }
+
+.css-mhc70k-MuiGrid-root {
+    margin-top: 0;
+}
+
+.css-18p86pu-MuiGrid-root {
+    margin-left: 0;
+}
+
+/* .css-1wbya6w-MuiGrid-root {
+    margin-top: 0;
+} */
+
+.css-4vzh1l-MuiGrid-root {
+    margin-top: 0;
+}
