--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,10 +11,7 @@ html, body {
     margin-left: 0;
 }
 
-/* .css-1wbya6w-MuiGrid-root {
-    margin-top: 0;
-} */
-
 .css-4vzh1l-MuiGrid-root {
     margin-top: 0;
+    margin-left: 0;
 }
