Close icon functionality

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -39,3 +39,7 @@ html, body {
 .css-16446nw-MuiInputBase-root-MuiInput-root:hover {
     border-bottom: none;
 }
+
+.css-16446nw-MuiInputBase-root-MuiInput-root:hover:not(.Mui-disabled, .Mui-error):before {
+    border-bottom: none;
+}
